terraform/rds.tf
resource "aws_db_subnet_group" "main" {
    name = "${var.project}-db-subnet-group"
    subnet_ids = [aws_subnet.db_a.id, aws_subnet.db_b.id]
}

resource "aws_db_instance" "mysql" {
    identifier = "${var.project}-db" # name shown in AWS console
    engine = "mysql"
    engine_version = "8.0"
    instance_class = "db.t3.micro"
    allocated_storage = 20
    db_name = "agora"
    username = var.db_username
    password = var.db_password

    db_subnet_group_name = aws_db_subnet_group.main.name
    vpc_security_group_ids = [aws_security_group.rds.id]
    skip_final_snapshot = true
    multi_az = false
}
